@@ -9,7 +9,7 @@
     IsPkgVersionGreaterOrEqualTo "2.1.1" && \
         PKG_FILE=${PKG}-${PKG_VERSION}.tar.bz2 || \
         PKG_FILE=${PKG}-${PKG_VERSION}.tar.gz
-    PKG_URL="http://sourceforge.net/projects/${PKG}/files/${PKG}/${PKG_VERSION}/${PKG_FILE}"
+    PKG_URL="https://sourceforge.net/projects/${PKG}/files/${PKG}/${PKG_VERSION}/${PKG_FILE}"
     PKG_DEPS="gcc"
 
     if ! IsPkgInstalled
