@@ -7,7 +7,7 @@
     PKG_VERSION=${FREEGLUT_VER}
     PKG_SUBDIR=${PKG}-${PKG_VERSION}
     PKG_FILE=${PKG}-${PKG_VERSION}.tar.gz
-    PKG_URL="http://sourceforge.net/projects/${PKG}/files/${PKG}/${PKG_VERSION}/${PKG_FILE}"
+    PKG_URL="https://sourceforge.net/projects/${PKG}/files/${PKG}/${PKG_VERSION}/${PKG_FILE}"
     PKG_DEPS="gcc mesa libxi cmake-settings"
     [ ! -z "${GLU_VER}" ] && PKG_DEPS="${PKG_DEPS} glu"
 
