@@ -6,7 +6,7 @@
     PKG_VERSION=${FREETYPE_VER}
     PKG_SUBDIR=${PKG}-${PKG_VERSION}
     PKG_FILE=freetype-${PKG_VERSION}.tar.bz2
-    PKG_URL="http://sourceforge.net/projects/freetype/files/freetype2/${PKG_VERSION}/${PKG_FILE}"
+    PKG_URL="https://sourceforge.net/projects/freetype/files/freetype2/${PKG_VERSION}/${PKG_FILE}"
 
     if ! IsPkgInstalled
     then
