@@ -9,15 +9,15 @@
     PKG_FILE=${PKG}-${PKG_VERSION}.tar.bz2
     if IsPkgVersionGreaterOrEqualTo "5.0.6"
     then
-        PKG_URL="http://sourceforge.net/projects/${PKG}/files/${PKG_FILE}"
+        PKG_URL="https://sourceforge.net/projects/${PKG}/files/${PKG_FILE}"
     elif IsPkgVersionGreaterOrEqualTo "5.0.0"
     then
-        PKG_URL="http://sourceforge.net/projects/${PKG}/files/giflib-5.x/${PKG_FILE}"
+        PKG_URL="https://sourceforge.net/projects/${PKG}/files/giflib-5.x/${PKG_FILE}"
     elif IsPkgVersionGreaterOrEqualTo "4.2.0"
     then
-        PKG_URL="http://sourceforge.net/projects/${PKG}/files/giflib-4.x/${PKG_FILE}"
+        PKG_URL="https://sourceforge.net/projects/${PKG}/files/giflib-4.x/${PKG_FILE}"
     else
-        PKG_URL="http://sourceforge.net/projects/${PKG}/files/giflib-4.x/${PKG_SUBDIR}/${PKG_FILE}"
+        PKG_URL="https://sourceforge.net/projects/${PKG}/files/giflib-4.x/${PKG_SUBDIR}/${PKG_FILE}"
     fi
     PKG_DEPS="gcc zlib jpeg"
 
