@@ -7,7 +7,7 @@
     PKG_VERSION=${LIBDRM_VER}
     PKG_SUBDIR=${PKG}-${PKG_VERSION}
     PKG_FILE=${PKG}-${PKG_VERSION}.tar.bz2
-    PKG_URL="http://dri.freedesktop.org/${PKG}/${PKG_FILE}"
+    PKG_URL="https://dri.freedesktop.org/${PKG}/${PKG_FILE}"
     PKG_DEPS="gcc pkg-config-settings expat libpciaccess"
 
     if ! IsPkgInstalled
