@@ -7,7 +7,7 @@
     PKG_VERSION=${JPEG_TURBO_VER}
     PKG_SUBDIR=${PKG}-${PKG_VERSION}
     PKG_FILE=${PKG_SUBDIR}.tar.gz
-    PKG_URL="http://downloads.sourceforge.net/project/${PKG}/${PKG_VERSION}/${PKG_FILE}"
+    PKG_URL="https://downloads.sourceforge.net/project/${PKG}/${PKG_VERSION}/${PKG_FILE}"
     PKG_DEPS="gcc yasm"
 
     if ! IsPkgInstalled
