@@ -14,7 +14,7 @@
         PKG_SUBDIR_ORIG=${PKG}-opensource-src-${PKG_VERSION}
         PKG_FILE=${PKG}-opensource-src-${PKG_VERSION}.tar.xz
     fi
-    PKG_URL="http://download.qt.io/archive/qt/${QT5_SUBVER}/${QT5_VER}/submodules/${PKG_FILE}"
+    PKG_URL="https://download.qt.io/archive/qt/${QT5_SUBVER}/${QT5_VER}/submodules/${PKG_FILE}"
     PKG_DEPS="gcc pkg-config-settings zlib libpng jpeg freetype fontconfig
               openssl sqlite libxcb libx11 libxext libxi libxrender libxrandr
               mesa"
