@@ -8,7 +8,7 @@
     PKG_SUBDIR=${PKG}-${PKG_VERSION}
     PKG_SUBDIR_ORIG=${PKG}-snapshot-${PKG_VERSION}
     PKG_FILE=${PKG}-snapshot-${PKG_VERSION}.tar.bz2
-    PKG_URL="http://download.videolan.org/pub/videolan/${PKG}/snapshots/${PKG_FILE}"
+    PKG_URL="https://download.videolan.org/pub/videolan/${PKG}/snapshots/${PKG_FILE}"
     PKG_DEPS="gcc"
 
     if ! IsPkgInstalled
